# noir_rs

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
circuits/: Nargo.toml
circuits/crates/keccak/: Nargo.toml
circuits/crates/keccak-large/: Nargo.toml  Prover.toml
circuits/crates/keccak-large/src/: main.nr
circuits/crates/keccak/src/: main.nr
circuits/crates/recursed/: Nargo.toml  Prover.toml
circuits/crates/recursed/src/: main.nr
circuits/crates/recursive/: Nargo.toml  Prover.toml
circuits/crates/recursive/src/: main.nr
circuits/scripts/: generate-proof-artifacts.sh  prove-honk.sh
crates/nargo/src/: errors.rs
crates/nargo/src/ops/: execute.rs
crates/noir_rs/: Cargo.toml
crates/noir_rs/src/: circuit.rs  execute.rs  lib.rs  main.rs  prove.rs  recursion.rs  utils.rs  verify.rs  witness.rs
crates/noir_rs/src/srs/: localsrs.rs  mod.rs  netsrs.rs
scripts/: android-ndk-ar.sh  android-ndk-cc.sh  generate_bb_bindings.sh
src/: circuit.rs  execute.rs  lib.rs  witness.rs
src/backends/: mod.rs
src/backends/barretenberg/: api.rs  mod.rs  prove.rs  recursion.rs  utils.rs  verify.rs
src/backends/barretenberg/srs/: localsrs.rs  mod.rs  netsrs.rs
src/backends/barretenberg/tests/: mod.rs
