[package]
name = "noir_rs"
version = "1.0.0-beta.8"
edition = "2021"
authors = ["Bartosz Nowak", "Theo Madzou"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
acir = { git = "https://github.com/noir-lang/noir.git", rev = "b33131574388d836341cea9b6380f3b1a8493eb8", package = "acir" }
acvm = { git = "https://github.com/noir-lang/noir.git", rev = "b33131574388d836341cea9b6380f3b1a8493eb8", package = "acvm" }
acvm_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", rev = "b33131574388d836341cea9b6380f3b1a8493eb8", package = "acvm_blackbox_solver" }
base64 = "0.22.0"
bincode = "1.3.3"
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", rev = "b33131574388d836341cea9b6380f3b1a8493eb8", package = "bn254_blackbox_solver" }
flate2 = "1.0.28"
hex = "0.4.3"
nargo = { git = "https://github.com/noir-lang/noir.git", rev = "b33131574388d836341cea9b6380f3b1a8493eb8", package = "nargo" }
reqwest = { version = "0.12.1", features = ["blocking"] }
serde = "1.0.197"
thiserror = "1.0.58"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_json = "1.0.125"

# Optional dependencies
bb_rs = { git = "https://github.com/zkpassport/aztec-packages.git", branch = "v1.0.0-nightly.20250723", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
default = []
barretenberg = ["bb_rs"]
android-compat = ["openssl"]

